# life-as-a-function

./: README.md
models/evo/: evo_finetune.py  evo_readme.md  pyproject.toml  run.sh  simple_validation.py
